# booksage

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml
booksage/worker/: Dockerfile  README.md  main.py  pyproject.toml
booksage/worker/src/booksage/: config.py  container.py  handler.py  main.py  parser.py  server.py
booksage/worker/src/booksage/adapters/etl/: __init__.py  docling_adapter.py  epub_adapter.py  pymupdf_adapter.py
booksage/worker/src/booksage/adapters/grpc/: handler.py
booksage/worker/src/booksage/application/: service.py
booksage/worker/src/booksage/chunking/: __init__.py  chonkers.py  free_chunker.py  ports.py
booksage/worker/src/booksage/domain/: __init__.py  models.py
booksage/worker/src/booksage/etl/: __init__.py  docling_adapter.py  epub_adapter.py  models.py  ports.py  pymupdf_adapter.py
booksage/worker/src/booksage/generation/: __init__.py  agent.py  ports.py  self_rag.py
booksage/worker/src/booksage/infrastructure/: __init__.py  ports.py  store_base.py  store_milvus.py
booksage/worker/src/booksage/pb/booksage/v1/: booksage_pb2.py  (+1 more)
booksage/worker/src/booksage/ports/: parser.py
booksage/worker/src/booksage/retrieval/: __init__.py  colbert_adapter.py  fusion.py  lightrag_adapter.py  models.py  ports.py  raptor_adapter.py  router.py
booksage/worker/tests/integration/: test_use_cases.py
booksage/worker/tests/sut/: test_sut.py
booksage/worker/tests/unit/chunking/: test_chunkers.py
booksage/worker/tests/unit/etl/: test_parsers.py
booksage/worker/tests/unit/generation/: test_agent.py  test_self_rag.py
booksage/worker/tests/unit/infrastructure/: test_stores.py
booksage/worker/tests/unit/retrieval/: test_fusion.py  test_retrievers.py
(+208 files in other folders)
