[project]
name = "booksage_worker"
version = "0.1.0"
description = "BookSage Python ML Worker"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    # gRPC & Core
    "grpcio>=1.78.1",
    "grpcio-tools>=1.78.1",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    
    # Fast API (carried over for some REST adapters if any, though gRPC is primary now)
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",

    # ETL & Parser Layer
    "pymupdf>=1.23.22",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.3",
    "docling>=2.74.0",
    
    # Retrieval Layer (Graph DB & Vector DB)
    "qdrant-client>=1.7.3",
    "pymilvus>=2.3.5",
    "neo4j>=5.17.0",
    
    # Generation & Agent Layer
    "openai>=1.13.3",
    "anthropic>=0.19.1",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/booksage"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["src/booksage/pb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "C", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
